# sppvip

./: .gitignore  CMakeLists.txt  audio_frame.h  audio_stream_player.cc  audio_stream_player.h  audio_stream_recorder.cc  audio_stream_recorder.h  main.cc  main.cpp  net_io_stream.cc  net_io_stream.h  node.cc  node.h  service_advertiser.cc  service_advertiser.h  service_common.h  service_discoverer.cc  service_discoverer.h
lib/: portaudio.cmake
